Adição de angular components

--- a/front/webav360/angular.json
+++ b/front/webav360/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "f384a7f2-934b-4d12-a12b-11a21a7e36ec"
   },
   "newProjectRoot": "projects",
   "projects": {
@@ -36,7 +37,10 @@
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "polyfills": [
+              "@angular/localize/init"
+            ]
           },
           "configurations": {
             "production": {
