--- a/front/webav360/package.json
+++ b/front/webav360/package.json
@@ -32,6 +32,10 @@
     "@angular/platform-server": "^21.0.8",
     "@angular/router": "^21.0.8",
     "@angular/ssr": "^21.0.5",
+    "@fortawesome/angular-fontawesome": "^4.0.0",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^20.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
