--- a/front/webav360/package.json
+++ b/front/webav360/package.json
@@ -43,7 +43,8 @@
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.26.17",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@angular/build": "^21.1.0",
